--- a/css/styles.css
+++ b/css/styles.css
@@ -56,8 +56,8 @@ img {
 
 .header {
   border-bottom: 1px solid #e7e9fc;
-  /* padding-top: 24px;
-  padding-bottom: 24px; */
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .header-container {
@@ -86,8 +86,8 @@ align-items: center;
 .nav {
   display: flex;
   align-items: center;
-    padding-top: 24px;
-  padding-bottom: 24px;
+    /* padding-top: 24px;
+  padding-bottom: 24px; */
 }
 
 .nav-list{
@@ -227,6 +227,10 @@ gap: 40px;
 
 /* About us */
 
+.about-section {
+  padding-bottom: 120px;
+}
+
 .about {
   font-weight: 700;
   font-size: 36px;
@@ -242,7 +246,7 @@ gap: 40px;
   /* list-style-type: none; */
   display: flex;
   gap: 24px;
-  width: calc((100% - 48px) / 3);
+  width: calc((100% - 2 * 24px) / 3);
   padding-bottom: 120px;
 }
 
@@ -259,7 +263,7 @@ gap: 40px;
 
 .team-list {
   display: flex;
-  width: calc((100% - 72px) / 4);
+  width: calc((100% - 3 * 24px) / 4);
   gap: 24px;
 }
 
@@ -286,6 +290,8 @@ gap: 40px;
 .team-item {
   padding: 32px 16px;
   text-align: center;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    border-radius: 0px 0px 4px 4px;
 }
 
 .team-position {
@@ -302,10 +308,10 @@ gap: 40px;
 
 .footer {
   background-color: var(--secondary-background-color);
+  padding: 100px 0;
 }
 
 .footer-container {
-  padding: 100px 0;
 }
 
 .footer .link {
@@ -372,19 +378,20 @@ gap: 40px;
 .filter-list .button:focus {
   background-color: var(--active-accent-background-color);
   color: var(--white-color);
+  border: 1px solid transparent;
 }
 
 /* Portfolio List */
 
 .portfolio-list {
   display: flex;
-justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .category-item {
   margin-right: 24px;
   margin-bottom: 48px;
-  /* width: calc((100% - 72px) / 3); */
+  width: calc((100% - 72px) / 3);
   max-width: 360px;
   gap: 24px;
 }
@@ -410,3 +417,5 @@ justify-content: space-between;
   letter-spacing: 0.02em;
   color: var(--primary-color);
 }
+
+
