--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,8 @@ p {
 
 ul {
   list-style-type: none;
-  margin: 0;
+  margin-top: 0;
+  margin-bottom: 0;
   padding-left: 0;
 }
 
@@ -41,37 +42,45 @@ img {
   display: block;
 }
 
+/* .list {
+  list-style-type: none;
+} */
+
 .link {
   text-decoration: none;
 }
 
 .container {
-  width: 100%;
-  max-width: 1158px;
-  padding: 0 15px;
+  width: 1158px;
   margin: 0 auto;
+  padding-right: 15px;
+  padding-left: 15px;
 }
 
 /* Header */
 
 .header {
   border-bottom: 1px solid #e7e9fc;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding: 24px 0 24px 0;
 }
 
-.header-container {
+.container-header {
   display: flex;
   justify-content: space-between;
-align-items: center;
+  align-items: center;
 }
 
+.nav {
+  display: flex;
+  align-items: center;
+}
 
 .logo-link {
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
+  align-items: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   text-decoration: none;
@@ -83,16 +92,9 @@ align-items: center;
   color: var(--first-logo-color);
 }
 
-.nav {
+.nav-list {
   display: flex;
-  align-items: center;
-    /* padding-top: 24px;
-  padding-bottom: 24px; */
-}
-
-.nav-list{
-display: flex;
-gap: 40px;
+  gap: 40px;
 }
 
 .nav-link {
@@ -101,22 +103,23 @@ gap: 40px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--secondary-color);
+  padding: 24px 0;
 }
 
 .nav-link:hover,
-.nav-link:focus
+.nav-link:focus,
 .nav-link:active {
   color: var(--active-accent-background-color);
 }
 
 .address {
   font-style: normal;
+  gap: 40px;
 }
 
 .address-list {
   display: flex;
   gap: 40px;
-  align-items: center;
 }
 
 .address-link {
@@ -138,11 +141,15 @@ gap: 40px;
 
 .hero {
   background-color: var(--secondary-background-color);
-   padding: 188px 0px;
-
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(/images/logo.jpg);
+  padding: 188px 0px;
 }
 
-.hero-container {
+.container-hero {
   display: flex;
   flex-direction: column;
   padding: 0 316px;
@@ -156,33 +163,41 @@ gap: 40px;
   text-align: center;
   letter-spacing: 0.02em;
   max-width: 496px;
-  margin-bottom: 48px;
+  padding-bottom: 48px;
 }
 
-.hero .button {
+.hero-btn {
   background-color: var(--accent-color);
   color: var(--white-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  letter-spacing: 0.04em;
-  border-radius: 4px;
   display: block;
   align-self: center;
+  letter-spacing: 0.04em;
+  cursor: pointer;
   padding: 16px 32px;
   min-width: 169px;
   height: 56px;
-  cursor: pointer;
   border: none;
 }
 
-.hero .button:hover,
-.hero .button:focus {
+.hero-btn:hover,
+.hero-btn:focus {
   background-color: var(--active-accent-background-color);
 }
 
 /* Our preference */
+
+.pref-section {
+  padding: 120px 0;
+}
+
+.container-pref {
+}
 
 .visually-hidden {
   position: absolute;
@@ -193,12 +208,8 @@ gap: 40px;
   padding: 0;
   white-space: nowrap;
   clip-path: inset(100%);
-  clip: rect(0 0 0 0);
+  clip: rect(0, 0, 0, 0);
   overflow: hidden;
-}
-
-.pref-section {
-  padding: 120px 0;
 }
 
 .pref-list {
@@ -207,7 +218,11 @@ gap: 40px;
 }
 
 .pref-list-item {
-  max-width: 264px;
+  width: 264px;
+}
+
+.pref-list-item > h3 {
+  padding-bottom: 8px;
 }
 
 .pref-title {
@@ -227,6 +242,9 @@ gap: 40px;
 
 /* About us */
 
+.container-about {
+}
+
 .about-section {
   padding-bottom: 120px;
 }
@@ -243,15 +261,12 @@ gap: 40px;
 }
 
 .about-list {
-  /* list-style-type: none; */
   display: flex;
   gap: 24px;
-  width: calc((100% - 2 * 24px) / 3);
-  padding-bottom: 120px;
 }
 
 .about-list-item {
-   border: 1px solid #E7E9FC;
+  width: calc((100%-48px) / 3);
 }
 
 /* Our team */
@@ -261,12 +276,6 @@ gap: 40px;
   padding: 120px 0;
 }
 
-.team-list {
-  display: flex;
-  width: calc((100% - 3 * 24px) / 4);
-  gap: 24px;
-}
-
 .team {
   font-weight: 700;
   font-size: 36px;
@@ -274,8 +283,13 @@ gap: 40px;
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--secondary-color);
-  text-align: center;
   margin-bottom: 72px;
+  text-align: center;
+}
+
+.team-list {
+  display: flex;
+  gap: 24px;
 }
 
 .team-name {
@@ -287,21 +301,22 @@ gap: 40px;
   margin-bottom: 8px;
 }
 
-.team-item {
-  padding: 32px 16px;
-  text-align: center;
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    border-radius: 0px 0px 4px 4px;
-}
-
 .team-position {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
 
+.team-item {
+  padding: 32px 16px;
+  text-align: center;
+}
+
 .team-card {
   background-color: var(--primary-background-color);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
 }
 
 /* Footer */
@@ -311,27 +326,23 @@ gap: 40px;
   padding: 100px 0;
 }
 
-.footer-container {
-}
-
-.footer .link {
+.footer-link {
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  text-decoration: none;
   color: var(--first-footer-logo-color);
   margin-bottom: 16px;
   display: inline-block;
 }
 
-.footer .link-web {
+.footer-link-web {
   color: var(--second-footer-logo-color);
 }
 
-.footer .text {
+.footer-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -355,29 +366,32 @@ gap: 40px;
 .filter-list {
   display: flex;
   gap: 24px;
-  align-items: center;
-  justify-content: center;
   margin-bottom: 72px;
+  justify-content: center;
+  align-items: center;
 }
 
 .filter-list .button {
   background-color: var(--accent-background-color);
   color: var(--accent-color);
+  border: 1px solid #e7e9fc;
+  border-radius: 4px;
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  padding: 12px 24px;
-  border-radius: 4px;
-  border: 1px solid #E7E9FC;
   cursor: pointer;
+  padding: 12px 24px;
 }
 
 .filter-list .button:hover,
 .filter-list .button:focus {
   background-color: var(--active-accent-background-color);
   color: var(--white-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
   border: 1px solid transparent;
 }
 
@@ -391,12 +405,9 @@ gap: 40px;
 .category-item {
   margin-right: 24px;
   margin-bottom: 48px;
-  width: calc((100% - 72px) / 3);
-  max-width: 360px;
-  gap: 24px;
 }
 
-.text-box {
+.app-box {
   border: 1px solid #e7e9fc;
   border-top: none;
   padding: 32px 16px;
@@ -409,6 +420,7 @@ gap: 40px;
   letter-spacing: 0.02em;
   color: var(--secondary-color);
   margin-bottom: 8px;
+  padding-left: 16px;
 }
 
 .portfolio-type {
@@ -416,6 +428,26 @@ gap: 40px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--primary-color);
+  padding-left: 16px;
 }
 
+.category-item:nth-child(3) {
+  margin-right: 0;
+}
 
+.category-item:nth-child(6) {
+  margin-right: 0;
+}
+
+.category-item:nth-child(9) {
+  margin-right: 0;
+  margin-bottom: 0;
+}
+
+.category-item:nth-child(8) {
+  margin-bottom: 0;
+}
+
+.category-item:nth-child(7) {
+  margin-bottom: 0;
+}
